# Geo2D

./: README.md  build.mx  compile.bat
SRC/: CMakeLists.txt  base2d.cpp  base2d.h  dash.cpp  dash.h  dashLoop.cpp  dashLoop.h  dashTrain.cpp  dashTrain.h  geo2d.h  geometric_structures.cpp  geometric_structures.h  main.cpp  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
include/: basic.h  config.h  math.h  tl.h
include/ewa_base/: domdata.h  logging.h  net.h  scripting.h
include/ewa_base/basic/: appbase.h  atomic.h  atomic_detail.h  bitflags.h  clock.h  cmdline.h  codecvt.h  config.h  console.h  dlink.h  dll_module.h  exception.h  file.h  filename.h  formater.h  fso.h  functor.h  functor_detail.h  hashing.h  language.h  lockguard.h  lookuptable.h  misc.h  object.h  object_ex.h  object_info.h  platform.h  pointer.h  pointer_detail.h  process.h  scanner_helper.h  stream.h  stream_buffer.h  string.h  string_detail.h  stringbuffer.h  system.h
include/ewa_base/collection/: arr_1t.h  arr_op.h  arr_xt.h  bst_map.h  bst_set.h  indexer_map.h  indexer_set.h  intrusive_list.h  linear_buffer.h  lockfree_queue.h  tmp_xt.h
include/ewa_base/crypto/: bn.h  md5.h  rsa.h
include/ewa_base/domdata/: dattribute.h  daxis_d.h  daxis_symb.h  daxisunit.h  dcolormap.h  dcommand.h  dcontext.h  dcoord.h  ddefinition.h  ddocbase.h  ddocdata.h  dfigdata.h  dfigdata_2d.h  dfigdata_3d.h  dfigdata_3d_surface.h  dfigdata_manager.h  dfigure.h  dlegend.h  dmesh.h  dmesh_bop.h  dmesh_field.h  dmesh_merge.h  dmesh_split.h  dmesh_sweep.h  dnode_info.h  dobject.h  dstate.h  (+11 more)
(+113 files in other folders)
